PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_Backorder_SRx_Rx__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Hash_Key__c</fullName>
        <description>This field is created for uniqueness</description>
        <label>GCP Hash Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Anticipated_Date_of_Availability__c</fullName>
        <label>Anticipated Date of Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Available_for_Dropship__c</fullName>
        <label>Available for Dropship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Avg_unit_Price__c</fullName>
        <label>Avg unit Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Back_Order_SKU_In_Transit__c</fullName>
        <label>Back Order SKU In Transit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Back_Order_Value__c</fullName>
        <label>Back Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Backorder_Qty__c</fullName>
        <label>Backorder Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Backorder_Report_Date__c</fullName>
        <label>Backorder Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_COMMIT_Week1__c</fullName>
        <label>COMMIT Week1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_COMMIT_Week2__c</fullName>
        <label>COMMIT Week2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Date_Dispatched__c</fullName>
        <label>Date Dispatched</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Demand_In_Tab_Cap__c</fullName>
        <label>Demand In Tab Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Expected_Monthly_Sales__c</fullName>
        <label>Expected Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Inv_in_transit_Value__c</fullName>
        <label>Inv in transit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Inventory_in_Transit__c</fullName>
        <label>Inventory in Transit</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Latest_Report_Date__c</fullName>
        <label>GCP Latest Report Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_MoH_Post_2_week__c</fullName>
        <label>MoH Post 2 week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_MoH__c</fullName>
        <label>MoH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_On_Backorder__c</fullName>
        <label>On Backorder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Value__c</fullName>
        <label>Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Pack_Size__c</fullName>
        <label>Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_BackOrder_Quantity__c</fullName>
        <label>GCP Past Week BackOrder Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_Backorder_Value__c</fullName>
        <label>GCP Past Week Backorder Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_Comments__c</fullName>
        <label>Past Week Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_MOH__c</fullName>
        <label>GCP Past Week MOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_Order_Quantity__c</fullName>
        <label>GCP Past Week Order Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_Order_Value__c</fullName>
        <label>GCP Past Week Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Past_Week_Report_Date__c</fullName>
        <label>GCP Past Week Report Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Vision_GCP_Backorder_SRx_Rx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Stocks_at_UPS__c</fullName>
        <label>Stocks at UPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_in_Transit__c</fullName>
        <label>Total in Transit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Week_1__c</fullName>
        <label>Week 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week_2__c</fullName>
        <label>Week 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_ndc__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCP Backorder SRx Rx</label>
    <nameField>
        <displayFormat>backorder-Srx-Rx -{0000000}</displayFormat>
        <label>GCP Backorder SRX and RxName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Backorder SRx Rx</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>